// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render a button component as expected 1`] = `
<button
  className="sc-bdVaJa bsMTYO"
  disabled={false}
>
  fakeLabel
</button>
`;

exports[`Button should render a button component with ghost prop 1`] = `
<button
  className="sc-bdVaJa bsMTYO"
  disabled={false}
>
  fakeLabel
</button>
`;

exports[`Button should render a button component with secondary appearance prop 1`] = `
<button
  className="sc-bdVaJa eerjhG"
  disabled={false}
>
  fakeLabel
</button>
`;
